--- a/lovable/native-features-copied-1/external-links.mdx
+++ b/lovable/native-features-copied-1/external-links.mdx
@@ -1,6 +1,7 @@
 ---
 title: "External Links"
 description: "Control how your app handles external links with custom routing for payments, OAuth, and deep linking"
+icon: "link"
 ---
 
 <iframe src="https://www.youtube.com/embed/xndyQytJs3E" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
